# renal-DWI-ROI-Annotator

./: .gitignore  README.md  pyproject.toml  run.py  settings.json
src/: __init__.py  loader.py  viewer.py
