# pyproject.toml — modern Python project metadata (PEP 621)
# This file tells pip / build tools about your project so people can
#     pip install .
# and get all dependencies automatically.

[project]
name = "renal-dwi-roi-annotator"
version = "0.1.0"
description = "ROI annotation tool for renal DWI series"
requires-python = ">=3.8"
dependencies = [
    "numpy",        # fast array / matrix operations
    "pydicom",      # read and parse DICOM medical image files
    "PyQt6",        # cross-platform GUI framework (Qt6 bindings)
    "nibabel",      # NIfTI image I/O for ROI mask saving
]
